[package]
name = "kalman_filter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
ndarray-linalg = { version = "0.13.1", features = ["intel-mkl-static"] }
num = "0.4.0"

read_and_write = {path = "../read_and_write"}
